[package]
name = "throttler"
version = "0.1.0"
edition = "2021"
description = "A lightweight Rust web API rate limiting and request throttling service"
license = "MIT"
repository = "https://github.com/example/throttler"
keywords = ["rate-limiting", "throttling", "web", "api", "redis"]
categories = ["web-programming", "network-programming"]

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
redis = { version = "0.23", features = ["tokio-comp"] }
anyhow = "1.0"
thiserror = "1.0"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }
dotenv = "0.15"
validator = { version = "0.16", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
prometheus = "0.13"
lazy_static = "1.4"