[package]
name = "throttler"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A lightweight Rust web API rate limiting and request throttling service"
license = "MIT"
repository = "https://github.com/yourusername/throttler"
keywords = ["rate-limiting", "throttling", "web", "api", "redis"]
categories = ["web-programming", "network-programming"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.24", features = ["tokio-comp"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
dotenv = "0.15"
validator = { version = "0.20", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4.0", features = ["derive"] }
regex = "1.10"
humantime-serde = "1.1"
anyhow = "1.0"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio-test = "0.4"
hyper = "1.0"
http-body-util = "0.1"

[lib]
name = "throttler"
path = "src/lib.rs"

[[bin]]
name = "throttler"
path = "src/main.rs"